# docqa

./: .env.example  .gitignore  LICENSE  PROCESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: cases.yaml  cases_multihop.yaml
sample_corpus/: faq.md  finance_memo.md  handbook.md  handbook_summary.md  hr_memo_2025.md  meeting_notes.md  network_ref.md  onboarding_email.eml  region_registry.md  support_ticket.md  vendor_invoice.txt
scripts/: build_corpus.py
src/docqa/: __init__.py  canon.py  citations.py  claimize.py  claimizer_llm.py  cli.py  config.py  conflict.py  core.py  doctor.py  embed.py  entail.py  eval_harness.py  generate.py  index_store.py  ingest.py  interfaces.py  latency.py  mutate.py  query_session.py  tui.py  types.py
src/docqa/parsers/: __init__.py  eml.py  markdown.py  pdf.py  text.py
src/docqa/retrieval/: __init__.py  dense.py  hybrid.py  select.py  sparse.py
tests/: test_canon_review_fixes.py  test_citation_integrity.py  test_claimize_llm.py  test_claimize_llm_primary.py  test_claimize_rule.py  test_config.py  test_conflict.py  test_core_resolve.py  test_entail.py  test_generate.py  test_harness.py  test_index_cmd.py  test_index_store.py  test_injection.py  test_latency.py  test_latency_gate.py  test_multihop.py  test_mutate.py  test_refusal_calibration.py  test_retrieve_dense.py  test_retrieve_hybrid.py  test_review_mediums.py  test_selection_contrast.py  test_smoke.py  test_tui.py  test_types.py  test_value_canon.py
tests/parsers/: test_eml.py  test_md_text.py  test_pdf.py
