[project]
name = "docqa"
version = "0.1.0"
description = "Grounded document Q&A over a folder of mixed personal documents — every answer cites its source, refuses when it can't, and surfaces conflicts."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Theo Chen" }]
dependencies = [
    "anthropic>=0.116.0",
    "numpy>=2.4.6",
    "pydantic>=2.6",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.6.0",
]

[project.urls]
Homepage = "https://github.com/theochen1/docqa"
Repository = "https://github.com/theochen1/docqa"

[project.optional-dependencies]
# Heavier/optional capabilities kept out of the default install so a fresh clone stays lean.
# (Wired in by later build tasks; declared here so the extras exist from the start.)
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
docqa = "docqa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docqa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
